# tahoe-capabilities

./: .gitignore  flake.nix  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
nix/: default.nix  lib.nix  tests.nix
src/tahoe_capabilities/: __init__.py  hashutil.py  parser.py  predicates.py  py.typed  serializer.py  strategies.py  types.py
src/tahoe_capabilities/test/: test_capabilities.py
src/test/: build_test_vector.sh  test_capabilities.py
