[metadata]
name = tahoe-capabilities
version = 2022.7.18
requires_python = >=3.9,<3.10

[options]
package_dir =
    =src
packages = find:
install_requires =
    tahoe-lafs

[options.extras_require]
test =
    twisted
    testtools
    hypothesis
    mypy
    mypy-zope

[options.packages.find]
where = src
