[metadata]
name = tahoe-capabilities
description = A library for working with Tahoe-LAFS data capability values
url = https://tahoe-lafs.org/
project_urls =
    Source=https://github.com/tahoe-lafs/tahoe-capabilities
    Issues=https://github.com/tahoe-lafs/tahoe-capabilities/issues
license = GPLv2

# year.day.patch-counter
version = 2022.8.0
requires_python = >=3.7,<3.11

[options]
package_dir =
    =src
packages = find:
install_requires =
    attrs

[options.extras_require]
test =
    twisted
    hypothesis

[options.packages.find]
where = src

[flake8]
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
#
# If you’re using Flake8, you can bump max-line-length to 88 and mostly forget
# about it. However, it’s better if you use Bugbear’s B950 warning instead of
# E501, and bump the max line length to 88 (or the --line-length you used for
# black), which will align more with black’s “try to respect --line-length,
# but don’t become crazy if you can’t”. You’d do it like this:
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
